# Terrain-AI

./: .env.example  .gitignore  AGENT_INSTALL.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_GUIDE.md  README.md  README_CN.md  mcp.json  package.json  pyproject.toml
.claude/commands/: api-browse.md  api-detail.md  api-doc-gen.md  api-doc.md  api-docs.md  api-find.md  api-list.md  ask.md  cgb-start.md  code-locate.md  code-search.md  code-snippet.md  embed-gen.md  get-wiki.md  graph-build.md  graph-query.md  init-repo.md  list-api.md  list-repos.md  list-wiki.md  locate-func.md  query-graph.md  repo-info.md  repo-init.md  search-code.md  switch-repo.md  wiki-gen.md  wiki-list.md  wiki-read.md
.github/workflows/: ci.yml
code_graph_builder/: README.md  __init__.py  __main__.py  builder.py  cgb_cli.py  cli.py  commands_cli.py  config.py  constants.py  graph_updater.py  language_spec.py  models.py  parser_loader.py  settings.py  types.py
code_graph_builder/embeddings/: __init__.py  qwen3_embedder.py  vector_store.py
code_graph_builder/entrypoints/cli/: cgb_cli.py  cli.py  commands_cli.py
code_graph_builder/entrypoints/mcp/: __init__.py  file_editor.py  pipeline.py  server.py  tools.py
code_graph_builder/examples/: example_configuration.py  example_kuzu_usage.py  example_semantic_search_full.py  generate_wiki.py  rag_example.py  test_cli_demo.py  test_embedding_api.py  test_kuzu_local.py  test_llm_api.py  test_rag_redis.py  test_rag_tinycc.py  test_tinycc.py  test_tinycc_memory.py  test_tinycc_report.py
code_graph_builder/foundation/parsers/: __init__.py  call_processor.py  call_resolver.py  definition_processor.py  (+7 more)
code_graph_builder/guidance/: __init__.py  agent.py  toolset.py
code_graph_builder/mcp/: api_doc_generator.py  file_editor.py  pipeline.py  server.py  tools.py
code_graph_builder/parsers/: __init__.py  call_processor.py  call_resolver.py  definition_processor.py  factory.py  import_processor.py  structure_processor.py  type_inference.py  utils.py
code_graph_builder/rag/: __init__.py  camel_agent.py  kimi_client.py  llm_backend.py  prompt_templates.py  rag_engine.py  review_report.md
code_graph_builder/services/: __init__.py  graph_service.py  kuzu_service.py  memory_service.py
code_graph_builder/tests/: ACCEPTANCE_CRITERIA_PHASE2.md  __init__.py  run_acceptance_check.py  test_api_find.py  test_api_find_integration.py  test_basic.py  test_call_resolution_scenarios.py  test_embedder.py  test_encoding_parsing.py  test_mcp_protocol.py  test_mcp_user_flow.py  test_rag.py  test_regression_e2e.py  test_settings.py  test_step1_graph_build.py  test_step2_api_docs.py  test_step3_embedding.py  test_vector_store.py
code_graph_builder/tools/: __init__.py  graph_query.py  semantic_search.py
code_graph_builder/utils/: encoding.py  path_utils.py
contributing/: add-feature.md  add-language.md  architecture.md  testing.md
docs/: code-graph-builder-slides.html  course.html  index.html
docs/cgb-course/: _base.html  index.html
docs/site/: demo-data.js  design-system.md  index.html  style.css
npm-package/: code-graph-builder-0.19.0.tgz  code-graph-builder-0.20.0.tgz  code-graph-builder-0.23.0.tgz  code-graph-builder-0.24.0.tgz  code-graph-builder-0.27.0.tgz  code-graph-builder-0.28.0.tgz  code-graph-builder-0.31.0.tgz  code-graph-builder-0.33.0.tgz  code-graph-builder-0.34.0.tgz  code-graph-builder-0.35.0.tgz  code-graph-builder-0.36.0.tgz  code-graph-builder-0.37.0.tgz  code-graph-builder-0.41.0.tgz  code-graph-builder-0.42.0.tgz  package.json  terrain-ai-2.1.19.tgz
npm-package/commands/: ask.md  code-gen.md  locate.md  research.md  trace.md
scripts/: debug-mcp.sh  install_global.py
terrain/: __init__.py
terrain/entrypoints/: link_ops.py
tests/: test_agent_install.py  test_dep_check.py
tests/entrypoints/: test_extract_predicates.py  test_find_symbol_in_docs_variable.py  test_find_symbol_usage.py  test_get_merge_diff.py  test_mcp_protocol.py  test_mcp_user_flow.py  test_rebuild_guard.py  test_repo_local_cgb.py  test_terrain_status.py
tests/foundation/: test_git_service.py  test_migrate_meta_v1_to_v2.py
tools/: dep_check.py
(+138 files in other folders)
