[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-graph-builder"
version = "0.1.0"
description = "多语言代码知识图谱构建库，支持 MCP 服务"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7",
    "tree-sitter>=0.22",
    "kuzu>=0.4",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "diff-match-patch>=20230430",
]

[project.optional-dependencies]
# 所有 Tree-sitter 语言语法
treesitter-full = [
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-rust",
    "tree-sitter-go",
    "tree-sitter-scala",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-lua",
]
# 仅 C/C++ 语法
treesitter-c = [
    "tree-sitter-c",
    "tree-sitter-cpp",
]
# 语义搜索（向量嵌入）
semantic = [
    "httpx>=0.25",
]
# RAG 模块
rag = [
    "httpx>=0.25",
]

[project.scripts]
code-graph-builder = "code_graph_builder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["code_graph_builder"]
