[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terrain-ai"
version = "2.1.12"
description = "Give your AI a complete map of any codebase — function signatures, call graphs, and semantic search"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7",
    "tree-sitter>=0.22",
    "kuzu>=0.4",
    "python-dotenv>=1.0",
    "mcp>=1.0",
    "diff-match-patch>=20230430",
    "requests>=2.28",
    "httpx>=0.25",
    # Common language grammars (needed for most repos)
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-c",
    "tree-sitter-cpp",
]

[project.optional-dependencies]
# Additional Tree-sitter language grammars (beyond the core set)
treesitter-full = [
    "tree-sitter-rust",
    "tree-sitter-go",
    "tree-sitter-scala",
    "tree-sitter-java",
    "tree-sitter-lua",
]
# Legacy alias (C/C++ now included in core dependencies)
treesitter-c = []
# Legacy aliases (httpx and requests now included in core dependencies)
semantic = []
rag = []

[project.urls]
Homepage = "https://github.com/JeremyJiao01/Terrain-AI"
Repository = "https://github.com/JeremyJiao01/Terrain-AI"
Issues = "https://github.com/JeremyJiao01/Terrain-AI/issues"
Changelog = "https://github.com/JeremyJiao01/Terrain-AI/blob/main/CHANGELOG.md"

[project.scripts]
terrain = "terrain.entrypoints.cli.cli:main"
terrain-mcp = "terrain.entrypoints.mcp:main"

[tool.pytest.ini_options]
markers = [
    "performance: marks tests as performance benchmarks",
    "accuracy: marks tests as accuracy measurements",
]

[tool.hatch.build.targets.wheel]
packages = ["terrain"]
